--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
+    "env-cmd": "^10.1.0",
     "framer-motion": "^6.5.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
@@ -26,7 +27,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:dev": "env-cmd -f dev.env react-scripts start",
+    "start:prod": "env-cmd -f prod.env react-scripts start",
+    "build:dev": "env-cmd -f dev.env react-scripts build",
+    "build:prod": "env-cmd -f prod.env react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
